--- a/python/mcp-{{cookiecutter.hyphen_domain}}-expert/pyproject.toml
+++ b/python/mcp-{{cookiecutter.hyphen_domain}}-expert/pyproject.toml
@@ -5,18 +5,19 @@ description = "{{cookiecutter.description}}"
 readme = "README.md"
 requires-python = "{{cookiecutter.python_version}}"
 dependencies = [
-    "mcp[cli]>=1.3.0",
+    "mcp[cli]>=1.6.0",
     "pydantic>=2.10.6",
 ]
 
 [project.scripts]
-mcp-{{cookiecutter.hyphen_domain}}-expert = "{{cookiecutter.underscore_namespace}}.mcp_{{cookiecutter.underscore_domain}}_expert.server:main"
+"awslabs.mcp-{{cookiecutter.hyphen_domain}}-expert = "{{cookiecutter.underscore_namespace}}.mcp_{{cookiecutter.underscore_domain}}_expert.server:main"
 
 [dependency-groups]
 dev = [
     "commitizen>=4.2.2",
     "pre-commit>=4.1.0",
     "ruff>=0.9.7",
+    "pyright>=1.1.398",
 ]
 
 [build-system]
@@ -72,9 +73,7 @@ version_files = [
     "pyproject.toml:version",
     "{{cookiecutter.underscore_namespace}}/mcp_{{cookiecutter.underscore_domain}}_expert.__init__py:__version__"
 ]
-
-[tool.uv]
-dev-dependencies = [
-    "pyright",
-]
 update_changelog_on_bump = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["awslabs"]
