feat: cookiecutters license urls (#117)
* feat: add license and urls for pyproject.toml

* fix: NOTICE pyproject.toml

* feat: add Apache-2.0 LICENSE

* fix: LICENSE only pyproject.toml

* feat: add NOTICE

--- a/python/{{cookiecutter.project_domain | lower | replace(' ', '-') | replace('_', '-')}}-mcp-server/pyproject.toml
+++ b/python/{{cookiecutter.project_domain | lower | replace(' ', '-') | replace('_', '-')}}-mcp-server/pyproject.toml
@@ -8,6 +8,15 @@ dependencies = [
     "mcp[cli]>=1.6.0",
     "pydantic>=2.10.6",
 ]
+license = "Apache-2.0"
+license-files = ["LICENSE", "NOTICE" ]
+
+[project.urls]
+homepage = "https://awslabs.github.io/mcp/"
+docs = "https://awslabs.github.io/mcp/servers/{{cookiecutter.project_domain | lower | replace(' ', '-') | replace('_', '-')}}-mcp-server/"
+documentation = "https://awslabs.github.io/mcp/servers/{{cookiecutter.project_domain | lower | replace(' ', '-') | replace('_', '-')}}-mcp-server/"
+repository = "https://github.com/awslabs/mcp.git"
+changelog = "https://github.com/awslabs/mcp/blob/main/src/{{cookiecutter.project_domain | lower | replace(' ', '-') | replace('_', '-')}}-mcp-server/CHANGELOG.md"
 
 [project.scripts]
 "awslabs.{{cookiecutter.project_domain | lower | replace(' ', '-') | replace('_', '-')}}-mcp-server" = "awslabs.{{cookiecutter.project_domain | lower | replace(' ', '-') | replace('_', '-') | replace('-', '_')}}_mcp_server.server:main"
