fix(cookiecutter): pytest coverage and licenses (#147)
* Update pyproject.toml
* Fix pre-commit
* Create tests
---------

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

--- a/python/{{cookiecutter.project_domain | lower | replace(' ', '-') | replace('_', '-')}}-mcp-server/pyproject.toml
+++ b/python/{{cookiecutter.project_domain | lower | replace(' ', '-') | replace('_', '-')}}-mcp-server/pyproject.toml
@@ -5,6 +5,7 @@ description = "{{cookiecutter.description}}"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "loguru>=0.7.0",
     "mcp[cli]>=1.6.0",
     "pydantic>=2.10.6",
 ]
@@ -13,6 +14,7 @@ license-files = ["LICENSE", "NOTICE" ]
 authors = [
     {name = "Amazon Web Services"},
     {name = "AWSLabs MCP", email="203918161+awslabs-mcp@users.noreply.github.com"},
+    {name = "{{cookiecutter.author_name}}", email="{{cookiecutter.author_email}}"},
 ]
 classifiers = [
     "License :: OSI Approved :: Apache Software License",
@@ -41,6 +43,10 @@ dev = [
     "pre-commit>=4.1.0",
     "ruff>=0.9.7",
     "pyright>=1.1.398",
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.26.0",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.12.0",
 ]
 
 [build-system]
@@ -103,3 +109,19 @@ packages = ["awslabs"]
 
 [tool.bandit]
 exclude_dirs = [".venv", "tests"]
+
+[tool.pytest.ini_options]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+testpaths = [ "tests"]
+asyncio_mode = "auto"
+
+[tool.coverage.report]
+exclude_also = [
+    'pragma: no cover',
+    'if __name__ == .__main__.:\n    main()',
+]
+
+[tool.coverage.run]
+source = ["awslabs"]
