--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,8 @@ plugins:
   - include-markdown
   - mermaid2:
       version: 11.6.0
-      javascript: https://cdn.jsdelivr.net/npm/mermaid@11.6.0/dist/mermaid.esm.min.mjs
+      javascript: null
+      outputFormat: svg 
 nav:
   - Home: index.md
   - AWS MCP Servers:
