feat: add comprehensive test suite achieving 94% coverage

--- a/src/agent-test/pyproject.toml
+++ b/src/agent-test/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langgraph>=0.4.5",
     "loguru>=0.7.3",
     "mcp>=1.9.0",
+    "moto>=5.1.5",
     "pydantic>=2.11.4",
 ]
 license = {text = "Apache-2.0"}
