--- a/docs/astro/package.json
+++ b/docs/astro/package.json
@@ -10,11 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.34.4",
-    "@astrojs/starlight-tailwind": "^4.0.1",
-    "@tailwindcss/vite": "^4.0.7",
-    "astro": "^5.6.1",
-    "sharp": "^0.34.2",
-    "tailwindcss": "^4.0.7"
+    "@astrojs/starlight": "0.34.4",
+    "@astrojs/starlight-tailwind": "4.0.1",
+    "@tailwindcss/vite": "4.1.10",
+    "astro": "5.9.4",
+    "sharp": "0.34.2",
+    "tailwindcss": "4.1.10"
   }
 }
