--- a/docs/astro/package.json
+++ b/docs/astro/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
   "dependencies": {
     "@astrojs/starlight": "0.34.4",
     "@astrojs/starlight-tailwind": "4.0.1",
-    "@tailwindcss/vite": "4.1.10",
+    "@astrojs/tailwind": "5.1.0",
     "astro": "5.9.4",
     "sharp": "0.34.2",
     "tailwindcss": "4.1.10"
-  }
+  },
+  "name": "",
+  "scripts": {
+    "astro": "astro",
+    "build": "astro build",
+    "dev": "astro dev",
+    "preview": "astro preview",
+    "start": "astro dev"
+  },
+  "type": "module",
+  "version": "0.0.1"
 }
