feat: replace cost-analysis with aws-pricing MCP Server (#758)
* refactor: Move files

* Add code-owners

* Update references and move python package

* Fix .github refs

* fix: Fix test

* feat: Rename get_pricing_from_api to get_pricing and remove get_pricing_from_web

* chore: Set version to 1.0.0

* chore: address comments

* docs: Remove deprecation notice

* chore: Fix version

---------

Co-authored-by: Nikolaus Spring <nspri@amazon.de>
Co-authored-by: Laith Al-Saadoon <9553966+theagenticguy@users.noreply.github.com>

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -81,12 +81,12 @@ body:
         - aws-diagram-mcp-server
         - aws-documentation-mcp-server
         - aws-location-mcp-server
+        - aws-pricing-mcp-server
         - bedrock-kb-retrieval-mcp-server
         - cdk-mcp-server
         - cfn-mcp-server
         - code-doc-gen-mcp-server
         - core-mcp-server
-        - cost-analysis-mcp-server
         - documentdb-mcp-server
         - dynamodb-mcp-server
         - frontend-mcp-server
