--- a/src/aws-pricing-mcp-server/pyproject.toml
+++ b/src/aws-pricing-mcp-server/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "awslabs.cost-analysis-mcp-server"
-version = "1.0.5"
-description = "An AWS Labs Model Context Protocol (MCP) server for Cost Analysis of the AWS services"
+name = "awslabs.aws-pricing-mcp-server"
+version = "1.0.0"
+description = "An AWS Labs Model Context Protocol (MCP) server for official pricing of AWS services"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -33,14 +33,14 @@ classifiers = [
 ]
 
 [project.scripts]
-"awslabs.cost-analysis-mcp-server" = "awslabs.cost_analysis_mcp_server.server:main"
+"awslabs.aws-pricing-mcp-server" = "awslabs.aws_pricing_mcp_server.server:main"
 
 [project.urls]
 Homepage = "https://awslabs.github.io/mcp/"
-Documentation = "https://awslabs.github.io/mcp/servers/cost-analysis-mcp-server/"
+Documentation = "https://awslabs.github.io/mcp/servers/aws-pricing-mcp-server/"
 Source = "https://github.com/awslabs/mcp.git"
 "Bug Tracker" = "https://github.com/awslabs/mcp/issues"
-Changelog = "https://github.com/awslabs/mcp/blob/main/src/cost-analysis-mcp-server/CHANGELOG.md"
+Changelog = "https://github.com/awslabs/mcp/blob/main/src/aws-pricing-mcp-server/CHANGELOG.md"
 
 [dependency-groups]
 dev = [
@@ -103,7 +103,7 @@ version = "0.0.0"
 tag_format = "v$version"
 version_files = [
     "pyproject.toml:version",
-    "awslabs/cost_analysis_mcp_server/__init__.py:__version__"
+    "awslabs/aws_pricing_mcp_server/__init__.py:__version__"
 ]
 update_changelog_on_bump = true
 
@@ -111,7 +111,7 @@ update_changelog_on_bump = true
 packages = ["awslabs"]
 
 [tool.pytest.ini_options]
-addopts = "--cov=awslabs.cost_analysis_mcp_server --cov-report=term-missing"
+addopts = "--cov=awslabs.aws_pricing_mcp_server --cov-report=term-missing"
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
