feat: Added local MCP server for Amazon Q Business application created using anonymous mode (#675)
* Initial commit of local mcp server for anonymous mode Amazon Q Business application

* updated license comment

* Updated the code and documentation as per https://github.com/awslabs/mcp/blob/main/DEVELOPER_GUIDE.md

* Fixed a couple of typose in README.md and added .kiro to .gitignore

* fixed pyright errors

* increased test coverage to improve codecov report

* Addressed review feedback

* Addressed review feedback

* Addressed review feedback about argument to qbiz_local_query

* removed old docs

* changed for docusaurus

* removed old docs

---------

Co-authored-by: alexa-perlov <56009415+alexa-perlov@users.noreply.github.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -25,6 +25,7 @@ NOTICE                                @awslabs/mcp-admins
 /src/amazon-mq-mcp-server               @kenliao94 @hashimsharkh         @awslabs/mcp-admins
 /src/amazon-neptune-mcp-server          @bechbd @cornerwings @krlawrence @awslabs/mcp-admins
 /src/amazon-qindex-mcp-server           @tkoba-aws @akhileshamara        @awslabs/mcp-admins
+/src/amazon-qbusiness-anonymous-mcp-server @abhjaw                          @awslabs/mcp-admins
 /src/amazon-rekognition-mcp-server      @ayush987goyal                   @awslabs/mcp-admins
 /src/amazon-sns-sqs-mcp-server          @kenliao94 @hashimsharkh         @awslabs/mcp-admins
 #/src/aurora-dsql-mcp-server            @awslabs/mcp-maintainers         @awslabs/mcp-admins
