feat: add aws-api-mcp-server embeddings step (#807)
Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -160,6 +160,11 @@ jobs:
         working-directory: src/${{ matrix.package }}
         run: uv run --frozen pyright
 
+      - name: Generate Embeddings
+        if: matrix.package == 'aws-api-mcp-server'
+        working-directory: src/${{ matrix.package }}
+        run: uv run --frozen generate-embeddings
+
       - name: Build package
         working-directory: src/${{ matrix.package }}
         run: uv build
