--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -28,6 +28,7 @@ NOTICE                                @awslabs/mcp-admins
 /src/amazon-qbusiness-anonymous-mcp-server @abhjaw                          @awslabs/mcp-admins
 /src/amazon-rekognition-mcp-server      @ayush987goyal                   @awslabs/mcp-admins
 /src/amazon-sns-sqs-mcp-server          @kenliao94 @hashimsharkh         @awslabs/mcp-admins
+/src/aws-api-mcp-server                 @rshevchuk-git                   @awslabs/mcp-admins
 #/src/aurora-dsql-mcp-server            @awslabs/mcp-maintainers         @awslabs/mcp-admins
 #/src/aws-bedrock-data-automation-mcp-server @awslabs/mcp-maintainers    @awslabs/mcp-admins
 /src/aws-diagram-mcp-server             @MichaelWalker-git               @awslabs/mcp-admins
