--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -67,8 +67,8 @@ NOTICE                                @awslabs/mcp-admins
 /src/postgres-mcp-server                @kennthhz                        @awslabs/mcp-admins
 /src/prometheus-mcp-server              @MohamedSherifAbdelsamiea        @awslabs/mcp-admins
 /src/redshift-mcp-server                @grayhemp                        @awslabs/mcp-admins
+/src/s3-tables-mcp-server               @okhomin @gsoundar               @awslabs/mcp-admins
 /src/stepfunctions-tool-mcp-server      @mmouniro                        @awslabs/mcp-admins
-
 /src/syntheticdata-mcp-server           @pranjbh                         @awslabs/mcp-admins
 /src/terraform-mcp-server               @alexa-perlov                    @awslabs/mcp-admins
 /src/timestream-for-influxdb-mcp-server @lokendrp-aws                    @awslabs/mcp-admins
