Add AWS API MCP server as part of the issue templates (#820)
Co-authored-by: Claudiu Popa <clpo@amazon.com>
Co-authored-by: alexa-perlov <56009415+alexa-perlov@users.noreply.github.com>

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -73,6 +73,7 @@ body:
       label: Server
       multiple: true
       options:
+        - aws-api-mcp-server
         - amazon-kendra-index-mcp-server
         - amazon-mq-mcp-server
         - amazon-neptune-mcp-server
