feature: option to not push images
Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

--- a/.github/actions/build-and-push-container-image/action.yml
+++ b/.github/actions/build-and-push-container-image/action.yml
@@ -47,6 +47,11 @@ inputs:
     description: 'The region to login'
     type: string
     required: false
+  push:
+    default: true
+    description: 'Whether to push the image'
+    type: boolean
+    required: false
 
 outputs:
   version:
@@ -119,8 +124,8 @@ runs:
         tags: public.ecr.aws/${{ inputs.public-erc-registry-alias }}/${{ github.repository_owner }}/${{ inputs.image }}
         context: ./src/${{ inputs.image }}
         file: ./src/${{ inputs.image }}/Dockerfile
-        push: true
-        outputs: type=image,push-by-digest=true,name-canonical=true,push=true
+        push: ${{ fromJson(inputs.push) == false && 'false' || 'true' }}
+        outputs: type=image,push-by-digest=true,name-canonical=true,push=${{ fromJson(inputs.push) == false && 'false' || 'true' }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
         github-token: ${{ inputs.github-container-registry-token }}
@@ -147,7 +152,7 @@ runs:
         ALIAS: ${{ inputs.public-erc-registry-alias }}
         OWNER: ${{ github.repository_owner }}
       run: |
-        docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+        docker buildx imagetools create ${{ fromJson(inputs.push) == false && '--dry-run' || '' }} $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
           $(printf 'public.ecr.aws/'$ALIAS'/'$OWNER'/'$IMAGE'@sha256:%s ' *)
       shell: bash
     - name: Inspect image
