feat: shrink dockerfile (#833)
* feat: shrink dockerfile

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* feat: add docker-healthcheck.sh

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* feat: uupdate docker-healthcheck.sh

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* feat: update docker-healthcheck.sh

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* feat: executable docker-healthcheck.sh

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* fix: correction in Dockerfile

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* fix: remove Dockerlite

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* fix: add uv-requirements.txt

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* fix: revert a couple back to sam/build-python

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* fix: dnf update

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* fix: only pip install once

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* fix: dnf

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* feat: save exported image and trivy results

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* feat: save exported image name

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* feat: valid artifact name

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* feat: clear runner space aggressively

Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

* feat: only clear when needed

Signed-off-by: Scott Schreckengaust <scottschreckengaust@use

--- a/src/aws-diagram-mcp-server/Dockerfile
+++ b/src/aws-diagram-mcp-server/Dockerfile
@@ -12,8 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-#FROM public.ecr.aws/sam/build-python3.10:1.137.1-20250411084548
-FROM public.ecr.aws/sam/build-python3.10@sha256:84738adb2767299571443d742c006d2f153c809c7181b099468583ac97be2dda AS uv
+# dependabot should continue to update this to the latest hash.
+FROM public.ecr.aws/sam/build-python3.12@sha256:e76d50b20fa10ee101886cb62962aaf87a5cd1d737af48e1b8395a05f3a7c52f AS uv
 
 # Install the project into `/app`
 WORKDIR /app
@@ -33,37 +33,38 @@ ENV UV_FROZEN=true
 # Copy the required files first
 COPY pyproject.toml uv.lock uv-requirements.txt ./
 
+# Python optimization and uv configuration
+ENV PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1
+
 # Install the project's dependencies using the lockfile and settings
 RUN --mount=type=cache,target=/root/.cache/uv \
-    pip install --require-hashes --requirement uv-requirements.txt && \
-    uv sync --frozen --no-install-project --no-dev --no-editable
+    pip install --require-hashes --requirement uv-requirements.txt --no-cache-dir && \
+    uv sync --python 3.12 --frozen --no-install-project --no-dev --no-editable
 
 # Then, add the rest of the project source code and install it
 # Installing separately from its dependencies allows optimal layer caching
 COPY . /app
 RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --frozen --no-dev --no-editable
+    uv sync --python 3.12 --frozen --no-dev --no-editable
 
 # Make the directory just in case it doesn't exist
 RUN mkdir -p /root/.local
 
-FROM public.ecr.aws/sam/build-python3.10@sha256:84738adb2767299571443d742c006d2f153c809c7181b099468583ac97be2dda
+FROM public.ecr.aws/sam/build-python3.12@sha256:e76d50b20fa10ee101886cb62962aaf87a5cd1d737af48e1b8395a05f3a7c52f
 
 # Place executables in the environment at the front of the path and include other binaries
-ENV PATH="/app/.venv/bin:$PATH:/usr/sbin"
+ENV PATH="/app/.venv/bin:$PATH:/usr/sbin" \
+    PYTHONUNBUFFERED=1
 
-# Install lsof for the healthcheck
-# Install other tools as needed for the MCP server
 # Add non-root user and ability to change directory into /root
-RUN yum update -y && \
-    yum install -y lsof graphviz && \
-    yum clean all -y && \
-    rm -rf /var/cache/yum && \
-    groupadd --force --system app && \
-    useradd app -g app -d /app && \
-    chmod o+x /root
+RUN dnf update -y && \
+    dnf install -y graphviz && \
+    dnf clean all -y && \
+    rm -rf /var/cache/dnf && \
+    groupadd --force --system app
 
-# Get the project from the uv layer
+# Copy application artifacts from build stage
 COPY --from=uv --chown=app:app /root/.local /root/.local
 COPY --from=uv --chown=app:app /app/.venv /app/.venv
 
@@ -74,5 +75,5 @@ COPY ./docker-healthcheck.sh /usr/local/bin/docker-healthcheck.sh
 USER app
 
 # When running the container, add --db-path and a bind mount to the host's db file
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 CMD [ "docker-healthcheck.sh" ]
+HEALTHCHECK --interval=60s --timeout=10s --start-period=10s --retries=3 CMD ["docker-healthcheck.sh"]
 ENTRYPOINT ["awslabs.aws-diagram-mcp-server"]
