fix: clear space for aws-api-mcp-server and do a sparse checkout (#863)
Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -140,9 +140,16 @@ jobs:
       id-token: write # Required for trusted publishing
     runs-on: ubuntu-latest
     steps:
+      - name: Clear Up Space (Agressively) for Multi-Architecture Builds that Run Out of Space
+        if: contains(toJson('["aws-api-mcp-server"]'), matrix.package)
+        uses: awslabs/mcp/.github/actions/clear-space-ubuntu-latest-agressively@25167c70e07d52455d651af931970d0ffdac75c5
+
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
+          lfs: true
           ref: ${{ needs.create-metadata.outputs.version }}
+          sparse-checkout: |
+            'src/${{ matrix.package }}'
 
       - name: Install uv
         uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba # v6.3.1
