--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -149,7 +149,7 @@ jobs:
           lfs: true
           ref: ${{ needs.create-metadata.outputs.version }}
           sparse-checkout: |
-            'src/${{ matrix.package }}'
+            src/${{ matrix.package }}
 
       - name: Install uv
         uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba # v6.3.1
